Git: Display dialog to configure user & name

Summary:
Added function to get git config
Added checking of `user.email` and `user.name` when committing
Added possibility to configure global git parameters
Added `QDialog` extension to choose the name and email, with possibility to save the settings as global and validation.
Used the extension to handle the lack of `user.name` or `user.email` configured when committing.
Added unit tests for readConfigOption and setConfigOption.
This fixes the [[ https://bugs.kde.org/show_bug.cgi?id=347351 | Bug 347351 ]]

Test Plan:
The new dialog works fine.
Tests pass.

BUG: 347351
FIXED-IN: 5.0

Reviewers: kfunk

Reviewed By: kfunk

Subscribers: mwolff, kdevelop-devel

Differential Revision: https://phabricator.kde.org/D852